--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,16 +1,27 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Login</title>
-  </head>
-  <body>
-    <h1>Login</h1>
-    <form method="post">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" /><br /><br />
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" /><br /><br />
-      <input type="submit" value="Login" />
-    </form>
-  </body>
-</html>
+{{ define "login" }}
+<div class="flex justify-center max-h-[80vh]">
+    <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card-body">
+            <h2 class="card-title">Login</h2>
+            <form hx-post="/login" hx-push-url="false" hx-target="#content" hx-swap="innerHTML">
+                <div class="form-control">
+                    <label class="label">
+                        <span class="label-text">Email</span>
+                    </label>
+                    <input class="input validator" type="email" required placeholder="mail@site.com" />
+                    <div class="validator-hint">Enter valid email address</div>
+                </div>
+                <div class="form-control">
+                    <label class="label">
+                        <span class="label-text">Password</span>
+                    </label>
+                    <input type="password" name="password" placeholder="password" class="input input-bordered" required>
+                </div>
+                <div class="form-control mt-6">
+                    <button class="btn btn-wide btn-primary" type="submit">Login</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+{{ end }}
