fix(login-form): add missing name attribute for email input

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -8,7 +8,7 @@
                     <label class="label">
                         <span class="label-text">Email</span>
                     </label>
-                    <input class="input validator" type="email" required placeholder="mail@site.com" />
+                    <input class="input validator" name="email" type="email" required placeholder="mail@site.com" />
                     <div class="validator-hint">Enter valid email address</div>
                 </div>
                 <div class="form-control">
