feat(navbar): add Sketchpad link to the navigation menu

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -34,6 +34,11 @@
           >Signup</a
         >
       </li>
+      <li>
+        <a hx-get="/sketchpad" hx-target="#content" class="btn btn-ghost"
+          >Sketchpad</a
+        >
+      </li>
     </ul>
     {{ end }}
   </div>
