--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,4 +1,5 @@
-<nav class="navbar bg-base-100">
+{{define "navbar"}}
+<nav id="navbar" class="navbar bg-base-100">
   <div class="flex-1">
     <a href="/" class="btn btn-ghost text-xl">Sketch to UI</a>
   </div>
@@ -6,10 +7,19 @@
     {{ if .userID }}
     <div class="dropdown dropdown-end">
       <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-        <div class="w-10 rounded-full">
-          <img src="{{ .avatarPath }}" />
+        <div class="flex items-center space-x-6">
+          <img
+            src="{{ .avatarPath }}"
+            alt="avatar"
+            class="w-10 h-10 rounded-full"
+          />
+          <div class="text-sm">
+            <div class="font-semibold">{{ .FirstName}}</div>
+            <div class="text-xs text-base-content/60">Product Designer</div>
+          </div>
         </div>
       </div>
+
       <ul
         tabindex="0"
         class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-52"
@@ -21,7 +31,7 @@
           </a>
         </li>
         <li><a>Settings</a></li>
-        <li><a hx-post="/logout" hx-target="#content">Logout</a></li>
+        <li><a hx-get="/logout" hx-target="#content">Logout</a></li>
       </ul>
     </div>
     {{ else }}
@@ -64,3 +74,15 @@
     </svg>
   </label>
 </nav>
+<script>
+  document.body.addEventListener("htmx:afterOnLoad", function (evt) {
+    if (evt.detail.xhr.getResponseHeader("HX-Trigger") === "navbarChanged") {
+      htmx.ajax("GET", "/navbar", {
+        target: "#navbar",
+        swap: "outerHTML",
+        pushURL: false,
+      });
+    }
+  });
+</script>
+{{end}}
