--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -15,6 +15,7 @@
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </head>
   <body class="bg-base-100" hx-push-url="true">
     <header>{{ template "navbar" . }}</header>
