--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -5,20 +5,33 @@
   </div>
   <div class="flex-none gap-2">
     {{ if .isLoggedIn }}
-    <!-- logged-in user navbar -->
     <div class="dropdown dropdown-end">
-      <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-        <div class="flex items-center space-x-6">
-          <img
-            src="{{ .avatarPath }}"
-            alt="avatar"
-            class="w-10 h-10 rounded-full"
-          />
-          <div class="text-sm">
-            <div class="font-semibold">{{ .FirstName}}</div>
-            <div class="text-xs text-base-content/60">Product Designer</div>
+      <div
+        tabindex="0"
+        role="button"
+        class="flex items-center space-x-2 p-2 rounded-lg hover:bg-base-200 cursor-pointer"
+      >
+        <div class="avatar">
+          <div class="w-10 h-10 rounded-full">
+            <img src="{{ .avatarPath }}" alt="avatar" />
           </div>
         </div>
+        <div class="text-sm">
+          <div class="font-semibold text-base-content">{{ .FirstName}} {{.LastName}}</div>
+          <div class="text-xs text-base-content/60">Product Designer</div>
+        </div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-5 w-5 ml-1"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          />
+        </svg>
       </div>
 
       <ul
@@ -36,7 +49,6 @@
       </ul>
     </div>
     {{ else }}
-    <!-- guest navbar -->
     <ul class="menu menu-horizontal px-1">
       <li>
         <a hx-get="/login" hx-target="#content" class="btn btn-ghost">Login</a>
@@ -54,26 +66,13 @@
     <input type="checkbox" class="theme-controller" value="dark" />
 
     <!-- sun icon -->
-    <svg
-      class="swap-off h-10 w-10 fill-current"
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-    >
-      <path
-        d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
-      />
-    </svg>
+    <span
+      class="swap-off iconify text-4xl"
+      data-icon="material-symbols:light-mode-outline-rounded"
+    ></span>
 
     <!-- moon icon -->
-    <svg
-      class="swap-on h-10 w-10 fill-current"
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-    >
-      <path
-        d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"
-      />
-    </svg>
+    <span class="swap-on iconify text-4xl" data-icon="tdesign:mode-dark"></span>
   </label>
 </nav>
 <script>
