--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -31,7 +31,7 @@
         </div>
         <div class="text-sm">
           <div class="font-semibold text-base-content">
-            {{ .FirstName}} {{.LastName}}
+            {{.firstName}} {{.lastName}}
           </div>
           <div class="text-xs text-base-content/60">Product Designer</div>
         </div>
