--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -5,7 +5,7 @@
   </div>
   <label class="swap swap-rotate">
     <!-- this hidden checkbox controls the state -->
-    <input type="checkbox" class="theme-controller" value="dark" />
+    <input type="checkbox" x-model="darkMode" class="theme-controller" value="dark" />
 
     <!-- sun icon -->
     <span
@@ -26,7 +26,7 @@
       >
         <div class="avatar">
           <div class="w-10 h-10 rounded-full">
-            <img src="{{ .avatarPath }}" alt="avatar" />
+            <img src="/{{ .avatarPath }}" alt="avatar" />
           </div>
         </div>
         <div class="text-sm">
@@ -57,7 +57,7 @@
           <a hx-get="/sketchpad" hx-target="#content">Sketchpad</a>
         </li>
         <li>
-          <a class="justify-between">
+          <a hx-get="/components/dashboard" hx-target="#content" hx-swap="innerHTML" class="justify-between">
             Profile
             <span class="badge">New</span>
           </a>
