--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,6 +1,11 @@
 {{ define "base" }}
 <!DOCTYPE html>
-<html lang="en" x-data="{ darkMode: localStorage.getItem('darkMode') === 'true' }" :data-theme="darkMode ? 'night' : 'light'" x-init="$watch('darkMode', val => localStorage.setItem('darkMode', val))">
+<html
+  lang="en"
+  x-data="{ darkMode: localStorage.getItem('darkMode') === 'true' }"
+  :data-theme="darkMode ? 'night' : 'light'"
+  x-init="$watch('darkMode', val => localStorage.setItem('darkMode', val))"
+>
   <head>
     <title>{{ .title }}</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -16,22 +21,66 @@
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-   
+
     <script src="https://cdn.jsdelivr.net/npm/split.js/dist/split.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.33.0/min/vs/loader.min.js"></script>
 
     <style>
-      [x-cloak] { display: none !important; }
+      [x-cloak] {
+        display: none !important;
+      }
+
+      /* View Transitions */
+      @keyframes fade-in {
+        from {
+          opacity: 0;
+        }
+      }
+
+      @keyframes fade-out {
+        to {
+          opacity: 0;
+        }
+      }
+
+      @keyframes slide-from-right {
+        from {
+          transform: translateX(90px);
+        }
+      }
+
+      @keyframes slide-to-left {
+        to {
+          transform: translateX(-90px);
+        }
+      }
+
+      /* define animations for the old and new content */
+      ::view-transition-old(slide-it) {
+        animation: 180ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+          600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
+      }
+      ::view-transition-new(slide-it) {
+        animation: 420ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+          600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
+      }
+
+      /* tie the view transition to a given CSS class */
+      .sample-transition {
+        view-transition-name: slide-it;
+      }
     </style>
 
-     <style type="text/tailwindcss">
+    <style type="text/tailwindcss">
       @custom-variant dark (&:where([data-theme=night], [data-theme=night] *));
     </style>
-
   </head>
   <body class="bg-base-100" hx-push-url="true">
     <header>{{ template "navbar" . }}</header>
-    <div id="content" class="p-4">{{ block "content" . }}{{ end }}</div>
+    <div id="content" class="p-4 sample-transition">
+      <h1>UI Copilot</h1>
+      {{ block "content" . }}{{ end }}
+    </div>
 
     {{template "confirmation.html"}}
   </body>
