--- a/templates/ui-components/component-main.html
+++ b/templates/ui-components/component-main.html
@@ -32,7 +32,7 @@
     class="btn btn-primary btn-sm"
     hx-get="/components/create"
     hx-target="#content"
-    hx-swap="innerHTML"
+    hx-swap="innerHTML transition:true"
     hx-push-url="true"
   >
     + New Component
