feat: add toast notification system with HTMX integration

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -81,6 +81,7 @@
       <h1>UI Copilot</h1>
       {{ block "content" . }}{{ end }}
     </div>
+    {{template "toast.html"}}
 
     {{template "confirmation.html"}}
   </body>
