--- a/templates/layouts/confirmation.html
+++ b/templates/layouts/confirmation.html
@@ -5,7 +5,7 @@
     <div class="modal-action">
       <form method="dialog">
         <button id="custom-confirm-cancel" class="btn">Cancel</button>
-        <button type="button" id="custom-confirm-button" class="btn btn-primary">Confirm</button>
+        <button type="button" id="custom-confirm-button" class="btn btn-error">Confirm</button>
       </form>
     </div>
   </div>
