--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -6,7 +6,7 @@
 >
   <div class="card w-96 shadow-md">
     <div class="card-body">
-      <div class="flex flex-col items-center mb-6">
+      <div class="flex flex-col items-center pb-4">
         <h2 class="card-title text-2xl font-bold text-primary mb-1">
           Create Account
         </h2>
@@ -98,7 +98,7 @@
             <p class="validator-hint pb-2">Must be more than 10 characters</p>
             <button
               type="button"
-              class="absolute top-2 right-2 bottom-10 z-50 text-gray-500 hover:text-gray-700 cursor-pointer"
+              class="absolute top-2 right-6 bottom-10 z-50 text-gray-500 hover:text-gray-700 cursor-pointer"
               @click="showPassword = !showPassword"
             >
               <span
@@ -131,7 +131,7 @@
             <p class="validator-hint pb-2">Passwords do not match</p>
             <button
               type="button"
-              class="absolute right-2 top-2 bottom-10 z-50 text-gray-500 hover:text-gray-700 cursor-pointer"
+              class="absolute right-2 top-2 bottom-10 right-6 z-50 text-gray-500 hover:text-gray-700 cursor-pointer"
               @click="showConfirmPassword = !showConfirmPassword"
             >
               <span
